@@ -5,6 +5,10 @@
 #include <stdlib.h>
 #include <string.h>
 
+#ifdef _WIN32
+#	define strdup(s) _strdup(s)
+#endif
+
 void desc_cleanup(struct desc_st *desc) {
 	if (desc != NULL) {
 		size_t i;
@@ -21,6 +25,10 @@ void desc_cleanup(struct desc_st *desc) {
 				desc->map[i] = NULL;
 			}
 		}
+		for (i = 0; i < desc->magics_len; i++) {
+			free(desc->magics[i].desc);
+		}
+		free(desc->magics);
 	}
 }
 
@@ -88,7 +96,7 @@ int desc_find(struct desc_st *in, unsigned tag, struct desc_st **out) {
 	return desc_get(in, tag, false, out, NULL);
 }
 
-static int store_nested(struct desc_st *map_in, char *key, int type, char *val, bool override) {
+static int store_nested(struct desc_st *map_in, const char *key, int type, const char *val, bool override) {
 	int res = GT_UNKNOWN_ERROR;
 	long tag;
 	char *ptr;
@@ -131,7 +139,7 @@ static int store_nested(struct desc_st *map_in, char *key, int type, char *val, 
 			res = desc_get(map_in, tag, true, &map, &isNew);
 			if (res != GT_OK) goto cleanup;
 		}
-		map->val = val;
+		map->val = strdup(val);
 		map->type = type;
 	}
 
@@ -146,7 +154,7 @@ cleanup:
 /**
  * Convert textual string into enum values or -1 if unknown.
  */
-static int get_type(char *ts) {
+static int get_type(const char *ts) {
 	if (!strcmp("*", ts)) return TLV_COMPOSITE;
 	if (!strcmp("INT", ts)) return TLV_INT;
 	if (!strcmp("RAW", ts)) return TLV_RAW;
@@ -155,14 +163,86 @@ static int get_type(char *ts) {
 	if (!strcmp("MTIME", ts)) return TLV_MTIME;
 	if (!strcmp("UTIME", ts)) return TLV_UTIME;
 	if (!strcmp("IMPRINT", ts)) return TLV_IMPRINT;
-
+	if (!strcmp("@MAGIC", ts)) return TLV_FILE_MAGIC;
 	return -1;
 }
 
-static int store_line(struct desc_st *map_in, char *key, char *ts, char *val, bool override) {
+static int store_magic(struct desc_st *map_in, const char *key, const char *desc) {
+	int res = GT_UNKNOWN_ERROR;
+	struct file_magic_st *magic;
+	size_t i;
+	char octet;
+
+	if (map_in == NULL || key == NULL) {
+		res = GT_INVALID_ARGUMENT;
+		goto cleanup;	
+	}
+
+	if (map_in->magics == NULL) {
+		map_in->magics_size = 10;
+		map_in->magics = malloc(sizeof(struct file_magic_st) * map_in->magics_size);
+	} else if (map_in->magics_size <= map_in->magics_len) {
+		map_in->magics_size += 10;
+		map_in->magics = realloc(map_in->magics, sizeof(struct file_magic_st) * map_in->magics_size);
+	}
+
+	if (map_in->magics == NULL) {
+		fprintf(stderr, "Out of memory.\n");
+	}
+
+	magic = map_in->magics + map_in->magics_len++;
+
+	memset(magic, 0, sizeof(struct file_magic_st));
+	magic->desc = strdup(desc); 
+
+	if (*key == '"') {
+		fprintf(stderr, "Unimplemented\n");
+		goto cleanup;
+	} else {
+		/* Assume the key is represented as hex. */
+		octet = 0;
+		for (i = 0; key[i] != '\0'; i++) {
+			char c = tolower(key[i]);
+
+			/* Sanity check. */
+			if (magic->len >= sizeof(magic->val)) {
+				res = GT_INVALID_FORMAT;
+				goto cleanup;
+			}
+
+			if (isdigit(c)) {
+				octet = (octet << 4) + (c - '0');
+			} else if (c >= 'a' && c <= 'f') {
+				octet = (octet << 4) + (c - 'a') + 10;
+			} else {
+				res = GT_INVALID_FORMAT;
+				goto cleanup;
+			}
+
+			/* Store the value for every second input. */
+			if ((i + 1) % 2 == 0) {
+				magic->val[magic->len++] = octet;
+				octet = 0;
+			}
+		}
+
+		/* Make sure there was no partial octet in the end. */
+		if ((i + 1) %2 == 0) {
+			/* The last octet was only one character. We assume, the trailing zero was omitted. */
+			magic->val[magic->len++] = octet << 4;
+		}
+	}
+
+	res = GT_OK;
+
+cleanup:
+
+	return res;
+}
+
+static int store_tag(struct desc_st *map_in, const char *key, int type, char *val, bool override) {
 	int res = GT_UNKNOWN_ERROR;
 	long tag;
-	int type;
 	char *ptr;
 	struct desc_st *map = NULL;
 	bool isNew = false;
@@ -174,13 +254,6 @@ static int store_line(struct desc_st *map_in, char *key, char *ts, char *val, bo
 
 	tag = strtol(key, &ptr, 16);
 	if (key == ptr || tag < 0 || tag > ((GT_TLV_MASK_TLV8_TYPE << 8) | 0xff) || (*ptr && *ptr != '.')) {
-		res = GT_INVALID_FORMAT;
-		goto cleanup;
-	}
-
-	/* Convert the type into a number .*/
-	type = get_type(ts);
-	if (type < 0) {
 		res = GT_INVALID_FORMAT;
 		goto cleanup;
 	}
@@ -204,11 +277,38 @@ static int store_line(struct desc_st *map_in, char *key, char *ts, char *val, bo
 			res = desc_get(map_in, tag, true, &map, &isNew);
 			if (res != GT_OK) goto cleanup;
 		}
-		map->val = val;
+		map->val = strdup(val);
 		map->type = type;
 	}
 
 	res = GT_OK;
+
+cleanup:
+
+	return res;
+}
+
+static int store_line(struct desc_st *map_in, const char *key, const char *ts, char *val, bool override) {
+	int res = GT_UNKNOWN_ERROR;
+	int type;
+
+	if (map_in == NULL || key == NULL || *key == '\0' || val == NULL) {
+		res = GT_INVALID_ARGUMENT;
+		goto cleanup;
+	}
+
+	/* Convert the type into a number .*/
+	type = get_type(ts);
+	if (type < 0) {
+		res = GT_INVALID_FORMAT;
+		goto cleanup;
+	}
+
+	if (type == TLV_FILE_MAGIC) {
+		res = store_magic(map_in, key, val);
+	} else {
+		res = store_tag(map_in, key, type, val, override);
+	}
 
 cleanup:
 
@@ -258,11 +358,8 @@ static int read_line(FILE *f, struct desc_st *map, bool override) {
 		rd = sscanf(line, " %256s %16s %1024[^\n]\n", key, type, val);
 		if (rd == 3) {
 			trim_line(val, strlen(val));
-#ifdef _WIN32
-			res = store_line(map, key, type, _strdup(val), override);
-#else
-			res = store_line(map, key, type, strdup(val), override);
-#endif
+
+			res = store_line(map, key, type, val, override);
 			if (res != GT_OK) goto cleanup;
 		}
 	}
