@@ -1,4 +1,4 @@
-
+4b53495055424c46	@MAGIC	KSI publications file magic bytes
 0501			RAW			HashDB
 0502			*			Forest
 0502.01			INT 		Forest round
