@@ -1,3 +1,4 @@
+* FEATURE: Automatic file magic bytes detection for known formats.
 * BUGFIX: Setting gttlvgrep (in case of '-r') and gttlvwrap stdout mode to binary.
 * BUGFIX: Grep is grepping invalid content.
 * BUGFIX: Setting gttlvdump stdin mode to binary.
